packages/svelte/tests/compiler-errors/samples/runes-no-derived-binding/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'constant_binding',
		message: 'Cannot bind to derived state'
	}
});
